--- a/templates/index.html
+++ b/templates/index.html
@@ -19,12 +19,24 @@
           </tr>
           {% for task in TaskList: %} 
             <tr>
-              <td>
-              {{ task [0] }}
-              </td>
-              <td>
-                {{ task [1] }}
-              </td>
+              <form method="post" action="/update">
+                  <td>
+                     <input type="hidden" name="id" value="{{ task [0] }}"/> 
+                     <input type="text" name="updatetask" value="{{ task [1] }}"/> 
+
+                    </td>
+                  
+                  <td>
+                    <!-- <input type="hidden" name="id" value=""/>  -->
+                    {{ task [2] }}
+                  </td>
+                  <td>
+                    <input type="submit" name="save" value="saveOrDelete">
+                  </td>
+                  <td>
+                    <input type="submit" name="save" value="X">
+                  </td>
+                </form>
             </tr>
           {%endfor%}
         </table>  
