--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,11 @@
+
 body{
   background-color: rgb(207, 207, 197);
+}
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 50vh;
 }
